# 3Engine

./: .gitignore  .travis.yml  3Engine.sln  CMakeLists.txt  LICENSE  README.md  README.txt  Setup.sh  appveyor.yml
3Engine/: 3Engine.vcxproj  3Engine.vcxproj.filters  CMakeLists.txt
3Engine/config/: SetupConfig.json
3Engine/shaders/BRDF/: fragment.glsl  program.json  vertex.glsl
3Engine/shaders/Color3D/: fragment.glsl  program.json  vertex.glsl
3Engine/shaders/SimpleColor/: program.json  vertex.glsl
3Engine/shaders/SkySphere/: program.json  vertex.glsl
3Engine/src/: Actor.cpp  Actor.h  Debug.h  Engine.cpp  Engine.h  Input.cpp  Input.h  OpenGLUtils.h
3Engine/src/Actors/: Cube.cpp
3Engine/src/Camera/: Camera.cpp  Camera.h  LookAt.cpp  LookAt.h  Ortho.h  Perspective.h
3Engine/src/Controllers/: FreeCameraController.cpp  FreeCameraController.h  SphereCameraController.cpp  SphereCameraController.h
3Engine/src/Math/: Maths.cpp  Matrix.cpp  Matrix.h  Matrix2.h  Matrix3.cpp  Matrix3.h  Quat.cpp  Quat.h  Vector.cpp  Vector.h  Vector2.h  Vector4.h
3Engine/src/SceneManagement/: SceneGraph.cpp  SceneGraph.h
3Engine/src/Shader/: Cubemap.cpp  Cubemap.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureLoader.cpp
3Engine/src/Shapes/: BasicShapes.cpp  BasicShapes.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  Parallelogram.h  Square.h  Triangle.h  Triangle3D.cpp  Triangle3D.h
3Engine/src/Time/: SDLTimeCalculator.cpp  SDLTimeCalculator.h
3Engine/src/Utilities/: Manager.h  Managers.h  Simulation.cpp  gamemode_client.h  json.hpp  singleton.h
3EngineExecutable/: 3EngineExecutable.vcxproj  3EngineExecutable.vcxproj.filters  CMakeLists.txt
3EngineExecutable/AVT-project-01/src/: main.cpp  main.h
3EngineExecutable/CGJ-project-01/src/: main.cpp  main.h
3EngineExecutable/config/: RuntimeConfig.json  SetupConfig.json
3EngineExecutable/shaders/Default/: fragment.glsl  program.json  vertex.glsl
3EngineExecutable/shaders/SimpleCubemapping/: program.json  vertex.glsl
3EngineExecutable/shaders/SimpleTexture/: fragment.glsl  program.json  vertex.glsl
3EngineExecutable/shaders/TimeMovingTexture/: fragment.glsl  program.json
3EngineExecutable/shaders/Wireframe/: program.json
3EngineExecutable/src/LightScene/: LightScene.cpp  LightScene.h
3EngineExecutable/src/LoaderAndScene/: ColoredActor.cpp  ColoredActor.h  LoaderAndScene.cpp  LoaderAndScene.h  MoveController.cpp  MoveController.h  TangramAnimation.cpp
3EngineExecutable/src/Quaternion/: Quaternion.cpp  Quaternion.h
3EngineExecutable/src/Tangram/: Tangram.h
3EngineExecutable/src/Tangram3D/: Tangram3D.cpp  Tangram3D.h
3EngineExecutable/src/TimeShaders/: MyEngine.cpp  MyEngine.h
3EngineTests/: 3EngineTests.vcxproj  3EngineTests.vcxproj.filters  CMakeLists.txt
3EngineTests/src/: MatrixTests.cpp  MatrixTests.h  VectorTests.cpp  VectorTests.h  catch.hpp  tests.cpp  tests.h
BuildTools/AppImage/: build.sh  cpld.sh
BuildTools/AppImage/3Engine.AppDir/: 3Engine.desktop  AppRun
Lab0/: CMakeLists.txt  README.txt
Lab0/Lab0/: Lab0.vcxproj  Lab0.vcxproj.filters
Lab0/config/: RuntimeConfig.json
Lab0/project/: Lab0.sln
Lab0/project/Lab0/: Lab0.vcxproj  Lab0.vcxproj.filters
Lab0/project/src/: 1-StartingOpenGL.cpp
Lab0/src/: 1-StartingOpenGL.cpp  Debug.h  Engine.cpp  Engine.h  main.cpp
cmake/: FindGLEW.cmake  FindGLUT.cmake  FindSDL2.cmake
config/: RuntimeConfig.json  SetupConfig.json
shaders/: Tangram.json  Wireframe.json
shaders/BRDF/: fragment.glsl  program.json
shaders/Color3D/: fragment.glsl  program.json  vertex.glsl
shaders/Default/: fragment.glsl  program.json  vertex.glsl
shaders/SimpleColor/: fragment.glsl
shaders/SimpleCubemapping/: fragment.glsl  vertex.glsl
shaders/SkySphere/: fragment.glsl
shaders/Wireframe/: fragment.glsl
src/: Camera.cpp  Camera.h  Debug.h  Engine.cpp  Engine.h  IActor.h  Input.cpp  Input.h  OpenGLUtils.h  Tangram.cpp  Tangram.h  main.cpp
src/Camera/: Camera.cpp  LookAt.cpp  LookAt.h  Ortho.cpp  Ortho.h
src/Engine/: Actor.cpp  Actor.h  Debug.h  Engine.cpp  Engine.h  IActor.h  IDrawable.h  Input.cpp  Input.h  OpenGLUtils.h
src/Engine/Actors/: Cube.h  SkySphere.cpp  SkySphere.h
src/Engine/Camera/: Camera.cpp  Camera.h  Perspective.cpp  Perspective.h
src/Engine/Controllers/: FreeCameraController.cpp  FreeCameraController.h  SphereCameraController.cpp  SphereCameraController.h
src/Engine/Math/: Maths.h  Matrix.cpp  Matrix.h  Quat.cpp  Vector.cpp  Vector.h  Vector4.h
src/Engine/SceneManagement/: SceneGraph.cpp  SceneGraph.h
src/Engine/Shader/: Cubemap.cpp  Cubemap.h  ITexture.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/Engine/Shapes/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Parallelogram.cpp  Parallelogram.h  Parallelogram3D.cpp  Parallelogram3D.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Triangle3D.h
src/Engine/Time/: GlutTimeCalculator.cpp  GlutTimeCalculator.h  Time.cpp  Time.h
src/Engine/Utilities/: Managers.h  Simulation.h  singleton.h
src/Examples/Quaternion/: CameraControllerRot.cpp  CameraControllerRot.h  Quaternion.cpp  Quaternion.h
src/Examples/Tangram/: Parallelogram.cpp  Parallelogram.h  Square.cpp  Square.h  Tangram.cpp  Triangle.cpp  Triangle.h
src/Examples/Tangram3D/: CameraController.cpp  CameraController.h  Cube.h  Parallelogram3D.h  Tangram3D.cpp  Tangram3D.h  Triangle3D.cpp  Triangle3D.h
src/Executable/: main.cpp
src/Math/: Maths.cpp  Maths.h  Matrix.cpp  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  TMatrix.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h
src/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/Tangram/: Parallelogram.cpp  Parallelogram.h  Square.cpp  Square.h  Tangram.cpp  Tangram.h  Triangle.cpp  Triangle.h
src/Tangram3D/: CameraController.cpp  CameraController.h  Cube.cpp  Cube.h  Parallelogram3D.h  Tangram3D.cpp  Tangram3D.h
src/Tests/: MatrixTests.h  VectorTests.h  tests.cpp
(+16 files in other folders)
